# ELTE-research-webscraping

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
config/: scraping_rules.yaml  settings.yaml
data/: Szejm_0731_1.csv
docs/: .~lock.Webscraping_polish_parlspeech_segmentation_task.docx#  GENERATED_PLAN.md  GENERATED_TODO.md  TODO.md  Webscraping_polish_parlspeech_segmentation_task.docx  Webscraping_polish_parlspeech_segmentation_task.md  architectural_plan.md  filestructure.md  first100rows-of-csv.csv  implementation.md  plan_md.md  refactor.md
scripts/: run_segmentation.py
src/: main.py  process_speeches.py
src/data/: csv_handler.py  models.py  validator.py
src/parsing/: html_parser.py  link_analyzer.py  speech_extractor.py
src/reconstruction/: dataset_builder.py  reconstruction_validator.py  row_inserter.py
src/scraping/: cache_manager.py  playwright_client.py  rules_loader.py  selenium_client.py  session_scraper.py  web_client.py
src/segmentation/: metadata_manager.py  order_calculator.py  segment_validator.py
src/utils/: config_loader.py  date_handler.py  logger.py  text_cleaner.py
tests/fixtures/: sample_data.csv  sample_html.html
tests/unit/: test_parsing.py
