[project]
name = "elte-webscraping"
version = "0.1.0"
description = "Webscraping task for ELTE: segmentation of the Polish parliament's speaker's speeches"
authors = [
    {name = "Levente Lajkó"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "selenium>=4.35.0,<5.0.0",
    "pandas>=2.0.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml (>=6.0.1,<7.0.0)",
    "pydantic>=2.0.0,<3.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "loguru>=0.7.0,<0.8.0",
    "PyYAML>=6.0.0,<7.0.0",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "playwright (>=1.55.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=23.0.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.0.0,<2.0.0"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
